--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
     "lodash": "^4.17.5"
   }
