--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3dhost",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,9 @@
     "express-handlebars": "^3.0.0",
     "ip": "^1.1.5",
     "line-by-line": "^0.1.6",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.5"
+  },
+  "optionalDependencies": {
     "serialport": "^6.1.1"
   }
 }
